2016-04-24         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

2016-04-11         Arnold D. Robbins     <arnold@skeeve.com>

	* regex_internal.c: Replace _GL_ATTRIBUTE_PURE with
	__attribute__.

2016-04-11         Arnold D. Robbins     <arnold@skeeve.com>

	* regexec.c: Stamp out last remaining use of __attribute.
	* regcomp.c: Undo change of 2016-01-24 when parsing single-byte
	ranges. Go back to treating them as bytes and not as characters.
	The change broke things on Windows in non-UTF-8 character sets.
	* mbsupport.h (mbstate_t): Define to int.
	Update copyright.

2016-04-10         John E. Malmberg      <wb8tyw@qsl.net>

	* regex_internal.c: Use _GL_ATTRIBUTE_PURE macro

2016-04-07         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (two_way_close_type): Move here from io.c.
	(close_rp): Add declaration.
	* builtin.c (do_printf): Call close_rp before fatal message when
	attempting to write the closed write end of a two way pipe.
	(do_print): Ditto.
	(do_print_rec): Ditto.
	* io.c (do_getline_redir): Same, for reading closed read end.
	(close_rp): Make not static.

2016-04-07  Eli Zaretskii  <eliz@gnu.org>

	* nonposix.h (WEXITSTATUS, WIFEXITED, WIFSIGNALED, WTERMSIG)
	(WIFSTOPPED, WSTOPSIG) [__MINGW32__]: New macros to replace the
	missing header sys/wait.h.
	(w32_status_to_termsig): Add prototype.

	* builtin.c (do_system) [__MINGW32__]: Compute the exit status of
	'system' differently under --traditional, as the low 8 bits are
	the most interesting.

2016-04-04         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_fflush): Add warning for flush to two-way
	pipe where write end was closed.
	* io.c (flush_io): Add some braces for the for loop.

2016-04-02         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_printf): If the redirection is two way but the
	fp is NULL, it means we're writing to the closed write-end of
	a two-way pipe. Issue a fatal error message.
	(do_print): Ditto.