@@ -1,0 +1,2 @@
+BEGIN { RS = "bar" }
+{ print $1, $2 }
