@@ -1,3 +1,8 @@
+2016-04-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (rscompat): New test.
+	* rscompat.awk, rscompat.in, rscompat.ok: New files.
+
 2016-04-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (pty1): Ignore errors.
