@@ -1,3 +1,8 @@
+2016-04-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* io.c (set_RS): Use rs1scan if do_traditional, even if length
+	of RS is > 1.
+
 2016-04-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.c: Sync with GNU grep.
